# ot

./: .editorconfig  .gitignore  CMakeLists.txt  main.cpp  ot.natvis  readme.md  test.cmd
comm/: client.hpp  eval-1op.txt  flow.txt  server.cpp  server.hpp
igush/: fixed_deque.h  igush_array.h  size_helper.h
ops/: CMakeLists.txt  ops.hpp  pstate.hpp  state.hpp
tests/: CMakeLists.txt  tests-big.cpp  tests-clients-opt.cpp  tests-clients-server.cpp  tests-clients.cpp  tests.cpp
utils/: cmd.cpp  cmd.hpp  noinit.hpp  timer.hpp
